crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__string__error_after_multiline.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/string/error_after_multiline.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var a (global @3) "1\n2\n3\n")
   (expr (global-by-name err)))

----- stderr -----
