crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__string__literals.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/string/literals.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (print (+ (+ "(" "") ")"))
   (print "a string")
   (print "A~¶Þॐஃ"))

----- stderr -----
