crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__string__multiline.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/string/multiline.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var a (global @3) "1\n2\n3")
   (print (global a @3)))

----- stderr -----
